--- a/python/src/static/inicio.css
+++ b/python/src/static/inicio.css
@@ -754,7 +754,7 @@ input {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: flex-start;
-    padding: 10px;
+    padding: 5px;
 }
 
 .estadistica-section {
@@ -763,17 +763,29 @@ input {
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     margin: 15px;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     transition: transform 0.3s ease-in-out;
 }
 
 .estadistica-section:nth-child(10) {
-    width: 100%;
+    width: 70%;
+}
+
+.estadistica-section:nth-child(11) {
+    width: 80%;
 }
 
 .estadistica-section:hover {
     transform: scale(1.05);
+}
+
+.estadistica-section:nth-child(10):hover {
+    transform: scale(1.01);
+}
+
+.estadistica-section:nth-child(11):hover {
+    transform: scale(1.01);
 }
 
 .estadistica-section h2 {
@@ -811,7 +823,7 @@ input {
     z-index: 1;
     left: auto;
     right: 0;
-    max-height: 150px;
+    max-height: 120px;
     overflow-y: auto;
 }
 
